hybrid/bootstrap-rest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: kafkarestproxy
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: kafkarestproxy
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: rest-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: kafkarestproxy
    type: kafkarestproxy
spec:
  ports:
    - name: external
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: kafkarestproxy
    clusterId: confluent
    confluent-platform: "true"
    type: kafkarestproxy
  sessionAffinity: ClientIP
  type: ClusterIP
