hybrid/opensearch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: ccloud
spec:
  type: NodePort
  selector:
    app: opensearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      nodePort: 30920
    - name: transport
      port: 9300
      targetPort: 9300
      nodePort: 30930
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: ccloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.14.0
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: data
              mountPath: /usr/share/opensearch/data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: ccloud
spec:
  type: NodePort
  selector:
    app: opensearch-dashboards
  ports:
    - name: dashboards
      port: 5601
      targetPort: 5601
      nodePort: 30950

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  namespace: ccloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch-dashboards
  template:
    metadata:
      labels:
        app: opensearch-dashboards
    spec:
      containers:
        - name: dashboards
          image: opensearchproject/opensearch-dashboards:2.14.0
          ports:
            - containerPort: 5601
